# autogen-playground

./: .gitignore  pyproject.toml
app/: __main__.py
app/config/: config.py
app/examples/: conversible_agent_example.py  docker_code_execution.py  docker_code_execution_v2.py  multi_agent_conversation.py
